--- a/BIM/src/main/resources/com/mycompany/bim/designer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/designer.fxml
@@ -1,26 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.6656891495601173" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DesignerController">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="453.0">
+<AnchorPane id="panePrimary" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DesignerController">
+   <children>
+      <Button fx:id="btnExit" layoutX="1256.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickExit" prefHeight="43.0" prefWidth="78.0" styleClass="buttonRed" text="Exit">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <ScrollPane layoutX="1045.0" layoutY="101.0" prefHeight="547.0" prefWidth="290.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="636.0" prefWidth="270.0" />
+        </content>
+      </ScrollPane>
+      <Canvas height="631.0" layoutX="106.0" layoutY="60.0" width="909.0" />
+      <Line endX="812.199951171875" layoutX="216.0" layoutY="57.0" startX="-121.59999084472656" startY="7.62939453125E-6" stroke="WHITE" strokeWidth="3.0" />
+      <Line endX="807.0" layoutX="221.0" layoutY="691.0" startX="-125.00001525878906" stroke="WHITE" strokeWidth="3.0" />
+      <Line endX="-100.00001525878906" endY="-132.60000610351562" layoutX="206.0" layoutY="179.0" startX="-100.00001525878906" startY="525.0" stroke="WHITE" strokeWidth="3.0" />
+      <Line endX="-100.0" endY="-134.1999969482422" layoutX="1115.0" layoutY="179.0" startX="-100.0" startY="525.7999877929688" stroke="WHITE" strokeWidth="3.0" />
+      <Label layoutX="1151.0" layoutY="69.0" text="Objects">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnShowList" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickHideList" prefHeight="43.0" prefWidth="43.0" styleClass="buttonGreen">
+         <font>
+            <Font size="14.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/listWhite.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <AnchorPane id="paneSecondary" fx:id="paneProyectList" prefHeight="750.0" prefWidth="414.0" visible="false">
          <children>
-            <ScrollBar layoutX="437.0" layoutY="49.0" orientation="VERTICAL" prefHeight="717.0" prefWidth="17.0" />
-            <AnchorPane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="456.0">
-               <children>
-                  <Button fx:id="btnBack" layoutX="393.0" layoutY="5.0" mnemonicParsing="false" onAction="#clickBack" prefHeight="36.0" prefWidth="55.0" text="Back">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+            <TableView fx:id="tbvProyectList" layoutX="31.0" layoutY="116.0" prefHeight="549.0" prefWidth="352.0">
+               <columns>
+                  <TableColumn fx:id="columnProyectName" prefWidth="111.20001220703125" text="Name" />
+                  <TableColumn fx:id="columnProyectEngineer" prefWidth="74.4000244140625" text="Engineer" />
+                  <TableColumn fx:id="columnProyectDesigner" prefWidth="70.4000244140625" text="Designer" />
+                  <TableColumn fx:id="columnProyectEndDate" prefWidth="92.800048828125" text="End date" />
+               </columns>
+            </TableView>
+            <Button fx:id="btnSelectObject" layoutX="31.0" layoutY="675.0" mnemonicParsing="false" onAction="#clickSelectObject" prefHeight="43.0" prefWidth="78.0" styleClass="buttonBlue" text="Select">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Label layoutX="122.0" layoutY="61.0" text="Proyect List">
+               <font>
+                  <Font size="31.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnCloseList" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickHideList" prefHeight="43.0" prefWidth="43.0" styleClass="buttonGreen">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/arrowBackWhite.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
