--- a/BIM/src/main/resources/css/engineer.css
+++ b/BIM/src/main/resources/css/engineer.css
@@ -150,6 +150,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     -fx-font-family: Arial;
 }
 
+.table-view .table-cell {
+    -fx-text-fill: black; 
+}
+
+
 .label {
     -fx-font-weight: bold;
     -fx-text-fill: white;
